--- a/water-my-plants/src/index.css
+++ b/water-my-plants/src/index.css
@@ -32,8 +32,24 @@ code {
   width: 20rem;
   height: 3rem;
   border: solid 3px lightgreen;
+  border-radius: 10px;
 }
 
 .header {
   display: flex;
+}
+
+.newplant {
+  max-width: 15rem;
+  margin: 1rem;
+}
+
+.logo-img {
+  max-width:3rem;
+  margin-right:0.5rem;
+}
+
+.WMP-text {
+  font-family: 'Pacifico', cursive;
+  color:black;
 }
